update images + htmlcss

--- a/html-css/exercicios/ex026/index.html
+++ b/html-css/exercicios/ex026/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midia Query</title>
-    <link rel="stylesheet" href="tela.css" media="screen">
-    <link rel="stylesheet" href="estilos/impressora.css" media="print">
+    <link rel="stylesheet" href="/mq001/estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="/mq001/estilos/impressora.css" media="print">
 </head>
 <body>
     <header>
@@ -29,6 +29,7 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, rem harum! Adipisci voluptate optio reiciendis illo enim fugit illum voluptates consequuntur vel, nostrum dolorum in porro similique soluta consectetur quasi!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, tenetur et. Natus, perspiciatis sed! Est beatae consequuntur obcaecati, totam unde error repellat delectus? Aspernatur ratione nam autem consequatur mollitia quae?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi eius impedit, autem vel sint quis fuga ratione. Soluta amet harum corrupti quisquam molestias aliquid tempora voluptates quos. Deserunt, rem iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum fuga recusandae aliquid veniam sunt consequatur, architecto unde sequi perspiciatis distinctio necessitatibus eum quod, tempora quos asperiores cupiditate harum? Aperiam, ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iure quis, quia velit numquam modi deleniti nihil provident et, delectus qui voluptatum facere quae dolorem ullam? Tempore provident explicabo labore.
             </p>
         </article>
     </main>
