--- a/html-css/exercicios/ex026/mq002/index.html
+++ b/html-css/exercicios/ex026/mq002/index.html
@@ -6,7 +6,7 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="/mq001/estilos/style.css" media="all">
     <link rel="stylesheet" href="/mq001/estilos/retrato.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="/mq001/estilos/paisagem.css" media="screen and (orientaton: landscape)">
+    <link rel="stylesheet" href="/mq001/estilos/paisagem.css" media="screen and (orientation: landscape)">
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
