update align-items + justify-content é suas propriedades

--- a/html-css/exercicios/ex027/flex004/index.html
+++ b/html-css/exercicios/ex027/flex004/index.html
@@ -7,17 +7,17 @@ Exemplo de bloco <!DOCTYPE html>
     <style>
         div.container {
             background-color: rgb(255, 0, 0);
-            height: 300px;
             display: flex;
-            flex-flow: row-reverse nowrap;
-            justify-content: space-around;
-            align-items: stretch;
+            flex-flow: row wrap;
+            padding: 3px;
         }
 
         div.item {
             background-color: rgb(255, 230, 0);
-            border: 1px solid rgb(0, 17, 255);
+            border: 2px solid rgb(0, 17, 255);
             text-align: center;
+            padding: 10px;
+            flex: auto;
         }
     </style>
 </head>
